fixed rendering on small devices

--- a/cover.css
+++ b/cover.css
@@ -62,3 +62,12 @@ h2 {
   position: absolute;
   top:37%;
 }
+
+@media only screen and (max-width: 768px) {
+  h1 {
+    font-size: 48px;
+  }
+  h2 {
+    font-size: 24px;
+  }
+}
